@@ -1,28 +1,28 @@
 include $(top_srcdir)/common.mk
 
-guilegwmodule_DATA = gnome-ui-spec.scm gnome-ui.scm
+guilegwmodule_DATA = libgnomeui-spec.scm libgnomeui.scm
 
 # There is one shared library for each wrapset. Each is produced by
 # g-wrap, but also may contain some hand-coded routines.
 
-lib_LTLIBRARIES = libgw-guile-gnome-gnome-ui.la
+lib_LTLIBRARIES = libgw-guile-gnome-libgnomeui.la
 
 ########################################################################
-## gnome-ui
-libgw_guile_gnome_gnome_ui_la_SOURCES = guile-gnome-gw-gnome-ui.c
+## libgnomeui
+libgw_guile_gnome_libgnomeui_la_SOURCES = guile-gnome-gw-libgnomeui.c
 
-libgw_guile_gnome_gnome_ui_la_CFLAGS = $(GUILE_GLIB_CFLAGS) \
+libgw_guile_gnome_libgnomeui_la_CFLAGS = $(GUILE_GLIB_CFLAGS) \
 	$(AM_CFLAGS) $(LIBGNOMEUI_CFLAGS) $(GUILE_CFLAGS) \
 	$(G_WRAP_CFLAGS)
 
-libgw_guile_gnome_gnome_ui_la_LIBADD = $(LIBGNOMEUI_LIBS) $(GUILE_LIBS) \
+libgw_guile_gnome_libgnomeui_la_LIBADD = $(LIBGNOMEUI_LIBS) $(GUILE_LIBS) \
 	$(G_WRAP_LINK_ARGS) $(GUILE_GLIB_LIBS)
 
-libgw_guile_gnome_gnome_ui_la_LDFLAGS = -module
+libgw_guile_gnome_libgnomeui_la_LDFLAGS = -module
 
 CLEANFILES = $(wildcard gnome-*.log) \
-	     $(wildcard guile-gnome-gw-*) gnome-ui.scm
+	     $(wildcard guile-gnome-gw-*) libgnomeui.scm
 
-BUILT_SOURCES = guile-gnome-gw-gnome-ui.c
+BUILT_SOURCES = guile-gnome-gw-libgnomeui.c
 
-EXTRA_DIST = gnome-ui-spec.scm
+EXTRA_DIST = libgnomeui-spec.scm
